force-app/main/default/objects/Related_Account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account that is associated with a particular Product Feature</description>
    <inlineHelpText>The Account that is associated with a particular Product Feature</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Product Features</relationshipLabel>
    <relationshipName>Feature_Account_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>