force-app/main/default/objects/Related_Account__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes on why this feature is associated with this account</description>
    <inlineHelpText>Notes on why this feature is associated with this account</inlineHelpText>
    <label>Notes</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>